# ccp-cylindrical

./: .gitmodules  CMakeLists.txt  README.md  density_i.txt  electric_field_x_step0.txt  electric_field_y.txt  grid_info.txt  instant_density_e_step0.txt  instant_density_i_step0.txt  phi_field.txt  velocity_i.txt
src/: main.cpp  parameters.cpp  parameters.h  reactions.cpp  simulation.cpp  simulation.h  simulation_events.cpp
